bugfix: settings z-index increased

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ body {
       border: 2px solid black;
       padding: 15px;
       position: absolute;
-      //z-index: 500;
+      z-index: 500;
       background-color: white;
 
       h3,
